# doubaoime-asr

./: .dockerignore  .env.example  .gitignore  API.md  Dockerfile  README.md  bootstrap.sh  docker-compose.yml  index.html  pyproject.toml  server.py
static/: index.html
